fixed some minor bugs. Footer, Text alignment, etc

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,7 @@
 }
 
 .footerText {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   color: #fff;
   text-align: center;
@@ -67,10 +67,12 @@
   display: block;
   margin-bottom: 15px;
   word-wrap: break-word;
-  text-align: right;
 }
 
 .uploadImg {
-  height: 15vh;
+  /* height: 15vh; */
   display: block;
+  max-width: 100%;  
+  margin: auto;
+  border-radius: 5px;
 }
